# vox

./: DATE_CORRECTIONS.md  MIGRATION.md  PLAN.md  README.md  TEST_INSTRUCTIONS.md  default_analysis_prompt.txt  pyproject.toml
tests/: test_align.py  test_analyzer.py  test_cli_date.py  test_config.py  test_contacts.py  test_diarize.py  test_naming.py  test_obsidian.py  test_speaker.py  test_transcriber.py  test_voiceprint.py
vox/: __init__.py  align.py  analyzer.py  cli.py  config.py  contacts.py  default_analysis_prompt.txt  diarize.py  hooks.py  migration_dates.py  naming.py  obsidian.py  recorder.py  speaker.py  transcriber.py  ui.py  voiceprint.py
